Fix the horizontal alignment of searched videos and mylist videos

--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -10,7 +10,7 @@
     height: fit-content;
     display: flex;
     flex-direction: column;
-    margin: 0 auto;
+    // margin: 0 auto;
 }
 
 .search-result-row{
